; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-coro.c_coro_malloc_full.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-coro.c_coro_malloc_full.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.coro = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @coro_malloc_full(%struct.coro* %0, i64 %1, void (i8*)* %2) #0 {
  %4 = alloca %struct.coro*, align 8
  %5 = alloca i64, align 8
  %6 = alloca void (i8*)*, align 8
  %7 = alloca i8*, align 8
  store %struct.coro* %0, %struct.coro** %4, align 8
  store i64 %1, i64* %5, align 8
  store void (i8*)* %2, void (i8*)** %6, align 8
  %8 = load i64, i64* %5, align 8
  %9 = call i8* @malloc(i64 %8)
  store i8* %9, i8** %7, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = call i64 @LIKELY(i8* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %3
  %14 = load %struct.coro*, %struct.coro** %4, align 8
  %15 = load void (i8*)*, void (i8*)** %6, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = call i32 @coro_defer(%struct.coro* %14, void (i8*)* %15, i8* %16)
  br label %18

18:                                               ; preds = %13, %3
  %19 = load i8*, i8** %7, align 8
  ret i8* %19
}

declare dso_local i8* @malloc(i64) #1

declare dso_local i64 @LIKELY(i8*) #1

declare dso_local i32 @coro_defer(%struct.coro*, void (i8*)*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
